--- a/VotoElectronicoo.API/appsettings.json
+++ b/VotoElectronicoo.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=VotoElectronicoDB;Username=Melody;Password=220216"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
