--- a/VotoElectronicoo.API/VotoElectronicoo.API.csproj
+++ b/VotoElectronicoo.API/VotoElectronicoo.API.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VotoElectronico.MVC\VotoElectronico.MVC.csproj" />
+  </ItemGroup>
+
 </Project>
