--- a/VotoElectronicoo.API/appsettings.json
+++ b/VotoElectronicoo.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=VotoElectronicoDB;Username=Melody;Password=220216"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=VotoElectronicoDB;Username=postgres;Password=220216"
   },
   "Logging": {
     "LogLevel": {
