--- a/VotoElectronico.MVC/appsettings.json
+++ b/VotoElectronico.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=VotoElectronico;Username=postgres;Password=220216"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
