--- a/VotoElectronicoo.API/VotoElectronicoo.API.csproj
+++ b/VotoElectronicoo.API/VotoElectronicoo.API.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.5" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.7.12" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2">
