--- a/VotoElectronicoo.API/appsettings.json
+++ b/VotoElectronicoo.API/appsettings.json
@@ -2,11 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=VotoElectronicoDB;Username=postgres;Password=220216"
   },
+
+  "Jwt": {
+    "Key": "VOTO_ELECTRONICO_CLAVE_SUPER_SEGURA_2026",
+    "Issuer": "VotoElectronicoAPI",
+    "Audience": "UsuariosSistema"
+  },
+
   "EmailSettings": {
     "Email": "melodycriollo.16@mail.com",
     "Password": "hkyjlfqwyuyemxsv",
-    "Host": " smtp.gmail.com",
-    "Port": 587  
+    "Host": "smtp.gmail.com",
+    "Port": 587
   },
 
   "Logging": {
@@ -14,5 +21,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "AllowedHosts": "*"
 }
